<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:focusableInTouchMode="true"
    android:layout_height="match_parent"
    android:paddingTop="16dp"
    android:background="@drawable/shape_content"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".InsertActivity"
    tools:showIn="@layout/activity_insert">

    <LinearLayout
        android:id="@+id/formLaporan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp">

        <ImageView
            android:id="@+id/imgMessage"
            android:layout_width="wrap_content"
            android:layout_height="72dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_sukses"
            android:visibility="gone" />
        <TextView
            android:id="@+id/tvMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:visibility="gone"
            android:textSize="20sp"
            android:textColor="@android:color/black"/>

        <Button
            android:id="@+id/btnInsertForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:visibility="gone"
            android:background="@drawable/shape_button"
            android:text="@string/isi_laporan_lagi"
            android:textColor="@android:color/white" />
        <TextView
            android:id="@+id/tvTitleCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buat_laporan"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:layout_margin="16dp"
            android:gravity="center"
            android:fontFamily="serif"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputNama"
            style="@style/EditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvTitleCreate"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            app:hintTextAppearance="@style/hintText"
            app:boxStrokeColor="@android:color/darker_gray">

            <EditText
                android:id="@+id/edtNama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@drawable/shape_cursor"
                android:layout_gravity="start"
                android:hint="@string/nama_pelapor"
                android:inputType="textEmailAddress"
                android:textAlignment="viewStart" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputJudul"
            style="@style/EditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            app:hintTextAppearance="@style/hintText"
            app:boxStrokeColor="@android:color/darker_gray">

            <EditText
                android:id="@+id/edtJudul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@drawable/shape_cursor"
                android:layout_gravity="start"
                android:hint="@string/judul_laporan"
                android:inputType="textEmailAddress"
                android:textAlignment="viewStart" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputIsi"
            style="@style/EditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/inputJudul"
            android:layout_marginEnd="32dp"
            app:hintTextAppearance="@style/hintText"
            app:boxStrokeColor="@android:color/darker_gray">

            <EditText
                android:id="@+id/edtIsi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@drawable/shape_cursor"
                android:layout_gravity="start"
                android:gravity="top"
                android:hint="@string/isi_laporan"
                android:inputType="text"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputKategori"
            style="@style/EditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/inputIsi"
            android:layout_marginEnd="32dp"
            app:hintTextAppearance="@style/hintText"
            app:boxStrokeColor="@android:color/darker_gray">

            <EditText
                android:id="@+id/edtKategori"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@drawable/shape_cursor"
                android:clickable="true"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:importantForAutofill="no"
                android:drawableEnd="@drawable/ic_arrow_drop_down_black_24dp"
                android:layout_gravity="start"
                android:gravity="top"
                android:hint="@string/kategori"
                tools:ignore="KeyboardInaccessibleWidget"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:id="@+id/inputLatLong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginRight="32dp"
            android:layout_marginLeft="32dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/inputKategori"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLatitude"
                style="@style/EditText.OutlinedBox"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/hintText"
                app:boxStrokeColor="@android:color/darker_gray">

            <EditText
                android:id="@+id/edtLatitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textCursorDrawable="@drawable/shape_cursor"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:importantForAutofill="no"
                android:layout_gravity="start"
                android:gravity="top"
                android:hint="@string/latitude"
                tools:ignore="KeyboardInaccessibleWidget"
                android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="50sp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:text="@string/latlong"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/inputLongitude"
                style="@style/EditText.OutlinedBox"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/hintText"
                app:boxStrokeColor="@android:color/darker_gray">

                <EditText
                    android:id="@+id/edtLongitude"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textCursorDrawable="@drawable/shape_cursor"
                    android:clickable="true"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:importantForAutofill="no"
                    android:layout_gravity="start"
                    android:gravity="top"
                    android:hint="@string/longitude"
                    tools:ignore="KeyboardInaccessibleWidget"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/inputFoto"
            style="@style/EditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:padding="4dp"
            android:orientation="vertical"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/border"
            app:hintTextAppearance="@style/hintText"
            app:boxStrokeColor="@android:color/darker_gray">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="5dp"
                android:text="@string/upload_gambar"/>

            <ImageView
                android:id="@+id/imgAddFoto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/ic_add_to_photos_black_24dp"
                android:padding="50dp"
                android:scaleType="fitCenter"
                />

            <ImageView
                android:id="@+id/imgFoto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:scaleType="centerCrop"
                android:src="@drawable/background_lapor"/>


        </LinearLayout>

        <TextView
            android:id="@+id/tvErrorInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:textSize="18sp"/>

        <Button
            android:id="@+id/btnProsesInsert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            android:background="@drawable/shape_button"
            android:text="@string/buat_laporan"
            android:textColor="@android:color/white" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>