<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_margin="8dp"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:cardCornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgDetail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/background_lapor" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tvDateDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="end"
            android:paddingEnd="8dp"
            android:fontFamily="sans-serif"
            android:paddingStart="0dp"
            app:layout_constraintTop_toBottomOf="@+id/cardView"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/tvStatusDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif"
            android:gravity="end"
            android:paddingStart="0dp"
            android:paddingEnd="8dp"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="@+id/tvDateDetail"
            app:layout_constraintTop_toBottomOf="@+id/tvDateDetail" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif"
            android:gravity="end"
            android:paddingStart="0dp"
            android:paddingEnd="8dp"
            android:text="@string/status"
            app:layout_constraintEnd_toStartOf="@+id/tvStatusDetail"
            app:layout_constraintTop_toBottomOf="@+id/tvDateDetail" />

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvStatusDetail">

            <TextView
                android:id="@+id/tvNameDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:padding="16dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@android:color/white"
            android:gravity="end"
            android:fontFamily="sans-serif"
            android:text="@string/nama_pelapor"
            app:layout_constraintBottom_toTopOf="@+id/relativeLayout"
            app:layout_constraintStart_toStartOf="@+id/relativeLayout"
            app:layout_constraintTop_toTopOf="@+id/relativeLayout" />

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

            <TextView
                android:id="@+id/tvJudulDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:padding="16dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@android:color/white"
            android:gravity="end"
            android:fontFamily="sans-serif"
            android:text="@string/judul_laporan"
            app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
            app:layout_constraintStart_toStartOf="@+id/relativeLayout2"
            app:layout_constraintTop_toTopOf="@+id/relativeLayout2" />

        <RelativeLayout
            android:id="@+id/relativeLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">

            <TextView
                android:id="@+id/tvIsiDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:padding="16dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@android:color/white"
            android:gravity="end"
            android:fontFamily="sans-serif"
            android:text="@string/isi_laporan"
            app:layout_constraintBottom_toTopOf="@+id/relativeLayout3"
            app:layout_constraintStart_toStartOf="@+id/relativeLayout3"
            app:layout_constraintTop_toTopOf="@+id/relativeLayout3" />

        <RelativeLayout
            android:id="@+id/relativeLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout3">

            <TextView
                android:id="@+id/tvKategeoriDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:padding="16dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@android:color/white"
            android:gravity="end"
            android:fontFamily="sans-serif"
            android:text="@string/kategori"
            app:layout_constraintBottom_toTopOf="@+id/relativeLayout4"
            app:layout_constraintStart_toStartOf="@+id/relativeLayout4"
            app:layout_constraintTop_toTopOf="@+id/relativeLayout4" />

        <RelativeLayout
            android:id="@+id/relativeLayout5"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/border"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout4">

            <TextView
                android:id="@+id/tvAlamatDetail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="sans-serif"
                android:padding="16dp"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@android:color/white"
            android:gravity="end"
            android:fontFamily="sans-serif"
            android:text="@string/alamat"
            app:layout_constraintBottom_toTopOf="@+id/relativeLayout5"
            app:layout_constraintStart_toStartOf="@+id/relativeLayout5"
            app:layout_constraintTop_toTopOf="@+id/relativeLayout5" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>